<resources>
    <string name="app_name">Apps-Lab</string>
    <string name="your_app_client_id">899517877911-7050gbnf4haui0q01cgj22hjknk1vj83.apps.googleusercontent.com</string>
    <string name="version_app">Version App 1.0</string>
    <string name="button_continue">Continue</string>
    <string name="onboarding1">Welcome To HadIRin Apps 🙌 </string>
    <string name="Image">Image</string>
    <string name="tag_created">Created By IR 21 || 22</string>
    <string name="button_register">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="welcome">Welcome Back</string>
    <string name="welcome_login">Login to your account</string>
    <string name="hadirin">hadIRin</string>
    <string name="Lab">Absensi Lab Information Retrieval</string>
    <string name="regis2">Create Your Account</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_pw">Invalid Password</string>
    <string name="tsignUp_google">Sign Up With Google</string>
    <string name="dontHaveAccount">Dont have account? Login</string>
    <string name="Already">Already have account? Login</string>
    <string name="forget">Forgot Password</string>
    <string name="hello_user">Hello,</string>
    <string name="take_photo">Take Photo</string>
    <string name="location">Activate Your Location</string>
    <string name="Submit">Submit</string>
    <string name="popUp_email">Nabilaptrc</string>
    <string name="delete">delete</string>
    <string name="matkul">Mobile Programing</string>
    <string name="date">Wednesday, 7 Augustus 2024</string>
    <string name="time">Time 13.24</string>
    <string name="ResultAbsensi">Attendance Result</string>
    <string name="back">Back</string>
    <string name="forgot_password_text">Please Write Your Email Below!</string>
    <string name="info_text">Please ensure your email is correct as we will send a password reset link on email.</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="invalid_Username">Username Must be 8 Character</string>
    <string name="invalid_phone">Username Must be 10 Character</string>
    <string name="hi">Hi,</string>
    <string name="your_email">your_email</string>
    <string name="sign_up_succes">Sign Up Succesfully 🙌</string>
    <string name="tv_tell_about">Tell us more about you ✨</string>
    <string name="edit">Edit</string>
    <string name="profile_txt1">Here is Your Profile</string>
    <string name="profile_txt2">Edit Your Profile Here😊</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="cant_find_location">Cant find location </string>

</resources>