<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_home_1"
    tools:context=".home.HomeFirstActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:text="Welcom To"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:lineSpacingExtra="8sp"
        android:text="@string/hadirin"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="74sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/interitalicvariablefontopszwght"
        android:text="@string/Lab"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_rounded_2"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:gravity="center"
        android:text="@string/button_login"
        android:textColor="@color/blue_btn"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/btn_rounded_white"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:gravity="center"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>