<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    android:padding="30dp"
    tools:context="by.marcel.apps_lab.forget.ForgetPasswordActivity">

    <TextView
        android:id="@+id/btn_back"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/btn_rounded_white"
        android:layout_width="75dp"
        android:layout_height="30dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:layout_marginBottom="15dp"
                android:text="@string/forgot_password_text"
                android:textColor="@color/blue1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnForget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_btn"
                android:text="Submit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:text="@string/info_text"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>