<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/blue2"
    tools:context=".biodata.BiodataActivity">

    <LinearLayout
        android:id="@+id/layoutimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="44dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_logout_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutimage"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intervariablefontopszwgh"
            android:text="@string/hi"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPopEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intervariablefontopszwgh"
            android:layout_marginStart="2dp"
            android:text="@string/your_email"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/greetingText" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_announcment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:text="@string/sign_up_succes"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHello" />

    <TextView
        android:id="@+id/tv_tell_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:gravity="left"
        android:text="@string/tv_tell_about"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_announcment" />

    <by.marcel.apps_lab.customeview.EditTextUsername
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/bc_edittext"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:hint="Username"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_tell_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <by.marcel.apps_lab.customeview.EditTextNim
        android:id="@+id/edtPhone"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bc_edittext"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:hint="Phone"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <by.marcel.apps_lab.customeview.EditTextNim
        android:id="@+id/edtNim"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bc_edittext"
        android:fontFamily="@font/intervariablefontopszwgh"
        android:hint="Nim"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/edtBtnContinue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_rounded_2"
        android:gravity="center"
        android:text="@string/button_continue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
